fix image not showing

--- a/src/pages/menu-details/menu-details.scss
+++ b/src/pages/menu-details/menu-details.scss
@@ -57,6 +57,7 @@ page-menu-details {
         }
 
         .ingre {
+          width: 100%;
           padding-left: 5%;
           flex: 1;
         }
